static/css/techreport/techreport.css
/* ... */
.subcategory-selector-wrapper:has(select:is(:focus-visible, :hover))::before {
  content: "";
  display: block;
  height: 100%;
  width: 2.5rem;
  background-color: var(--color-text-darker);
  border-left: 1px solid var(--color-text-darker);
  position: absolute;
  right: 0;
  top: 0;
  z-index: 0;
}

.subcategory-selector-wrapper:has(select:is(:focus-visible, :hover))::after {
  border-color: var(--color-page-background);
}

.subcategory-selector-wrapper:has(select:focus-visible) {
  background-color: var(--color-page-background);
}

.subcategory-selector-wrapper:has(select:focus-visible) label {
  color: var(--color-text) !important;
}

/* Timeseries cards */
.timeseries-container {
  margin-top: 2rem;
}

.timeseries-title {
  font-size: 1.15rem;
  margin-bottom: 0.75rem;
}

.timeseries-description {
  max-width: 50rem;
}

.timeseries-time {
  font-weight: 600;
  font-size: 1rem;
  margin: 0.75rem 0;
}

/* Info message */
.info-panel {
  background: var(--color-panel-background);
  color: var(--color-panel-text);
  font-weight: 400;
  padding: 0.5rem;
}

.info-panel > div {
  display: flex;
  align-items: center;
}

.info-panel p {
  margin-bottom: 0;
}

.info-panel .info-label {
  margin-right: 0.75rem;
  margin-left: 0.25rem;
  font-weight: 600;
}

/* General tables */
.table-ui-wrapper {
  overflow: auto;
}

.table-ui-wrapper:focus-visible {
  outline: 1.5px solid var(--color-teal-dark);
  outline-offset: 1.5px;
}

.table-ui {
  width: 100%;
  margin: 1rem 0;
  border-collapse: collapse;
}

.table-ui tr {
  border-bottom: 1px solid var(--color-card-border);
  width: 100%;
}

.table-ui tr:last-child {
  border-bottom: none;
}

.table-ui thead {
  font-size: 0.875rem;
  border-bottom: 1px solid var(--color-text);
}

.table-ui :is(td, th) {
  min-width: 5rem;
  text-align: left;
}

.table-ui :is(td, th):not(:last-child, :first-child) {
  padding: 1rem 0;
}

.table-ui :is(td, th):has(.progress-circle) {
  padding: 0.5rem 1rem 0.5rem 0;
}

.table-ui tbody tr {
  border-bottom: 1px solid var(--color-separator);
}

.table-ui tbody th {
  font-weight: normal;
}

.table-ui :is(td, th) strong {
  margin-right: 0.1rem;
  font-weight: 600;
}

.table-ui tr a {
  color: var(--color-link);
  text-decoration: underline;
}

.table-ui tr:has(.check-cell input[type="checkbox"]:checked) {
  background-color: var(--color-table-selected-bg);
  border: 1px solid var(--color-table-selected-border);
}

.table-ui tr:has(.check-cell input[type="checkbox"]:checked) :is(th, td) {
  border-bottom: 1px solid var(--color-table-selected-border);
  border-top: 1px solid var(--color-table-selected-border);
}

.table-ui tr:has(.app-cell a:is(:hover, :focus-visible)) {
  background-color: var(--table-row-hover);
  box-shadow: 0 0 0 1.5px var(--table-row-hover-border) inset,
    0 2px 0 var(--table-row-hover-border) inset;
  border-bottom-color: transparent;
}

.table-ui td.check-cell {
  position: relative;
}

.check-cell input[type="checkbox"]::before {
  content: "";
  display: block;
  width: 100%;
  height: 100%;
  z-index: 99;
  position: absolute;
  left: 0;
  top: 0;
}

.check-cell input[type="checkbox"]:is(:hover, :focus) {
  border-width: 2px;
}

.table-ui .app-wrapper {
  display: flex;
  min-width: 15rem;
  max-width: 25rem;
  align-items: center;
}

.table-ui .app-cell .app-img {
  display: block;
  height: 1rem;
  width: 1rem;
  margin-right: 0.75rem;
  background-repeat: no-repeat;
  background-size: 100% 100%;
  flex-grow: 0;
  flex-shrink: 0;
}

.table-ui .app-cell a {
  text-overflow: ellipsis;
  text-wrap: nowrap;
  overflow: hidden;
}

.table-ui .app-cell a:focus-visible {
  outline-color: var(--table-row-hover-border);
}

.table-ui .check-cell {
  min-width: 2rem;
  padding-left: 0.5rem;
}

.table-ui .check-cell input[type="checkbox"] {
  margin: 0;
}

.table-ui td ul {
  height: 30px;
  display: flex;
  align-items: flex-end;
  column-gap: 1px;
}

.table-ui td ul li {
  border: 1px solid var(--graph-color-primary-darker);
  height: 100%;
  background-image: linear-gradient(
    transparent calc(100% - var(--height)),
    var(--graph-color-primary) calc(100% - var(--height)) 100%
  );
  border-radius: 1px 1px 0 0;
  flex: 1;
  list-style-type: none;
}

.table-ui :is(th, td):is([data-app], .pct-value) {
  min-width: 7.5rem;
}

.table-ui .no-data {
  color: var(--color-text-lighter);
}

.table-ui .client {
  text-align: right;
  padding-right: 0.5rem;
}

.table-ui .good-scores {
  text-align: right;
}

.table-ui .eligible {
  font-size: 0.825rem;
  position: relative;
  top: 0.05rem;
}

.table-ui td.eligible {
  color: var(--color-text-lighter);
}

.table-ui .good-scores span[aria-hidden] {
  font-weight: 400;
  font-size: 0.825rem;
  margin-left: 1rem;
}

.table-ui td.main-cell {
  font-weight: 600;
}

.table-ui td.pct-value {
  position: relative;
}

.table-ui td.cwv-cell {
  min-width: 12rem;
}

.table-ui td.pct-value[data-value] span {
  width: 4.5rem;
  display: block;
}

.table-ui td.pct-value[data-value] span::after {
  content: "";
  display: block;
  height: 0.5rem;
  width: 100%;
  width: calc(100% - 4.95rem);
  position: absolute;
  top: 50%;
  right: 2.5rem;
  transform: translateY(-50%);
  border: 1px solid var(--color-progress-basic-border);
  border-radius: 3px;
  background-image: linear-gradient(
    90deg,
    var(--color-progress-basic-fill) 0% var(--cell-value),
    var(--color-progress-basic-bg) var(--cell-value) 100%
  );
}

.table-pagination {
  display: flex;
  justify-content: space-between;
  padding: 1.5rem 0 1rem;
  margin-top: 2.5rem;
  border-top: 1px solid var(--color-separator);
}

.table-page-info p {
  text-align: center;
}

.table-row-count {
  margin-top: 0.5rem;
  text-align: center;
}

.table-row-count label {
  font-weight: normal;
}

/* Metric components */
.component-heading-wrapper {
  display: flex;
  flex-wrap: wrap-reverse;
  gap: 1rem;
  justify-content: space-between;
}

.component-heading {
  flex: 0 0 30rem;
  max-width: 100%;
}
/* ... */

